--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -1,2 +1,66 @@
-<h2>Blog</h2>
-<p>In construction ...</p>
+<h2><%= link_to '<i class="glyphicon glyphicon-circle-arrow-left"></i>'.html_safe, root_path %> Blog</h2>
+<p>En construccion ...</p>
+
+<div class="row ">
+  <div class="col-md-4">
+    <div class="thumbnail">
+      <div class="photoset_row photoset_row_1" >
+        <a href="#" class="photoset_photo rapid-noclick-resp" id="photoset_link_98161315082_1" data-photoset-index="1"><img style="
+        width:250px;" src="http://38.media.tumblr.com/56a7c4dc02ff00efbcb76b09a438b4b7/tumblr_nc11qqfLcm1qkxrtro3_250.jpg" alt="" data-pin-url="http://betype.co/post/97706804405/paper-towns-by-risa-rodil"></a>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="thumbnail">
+      <img style="
+      width:250px;" src="http://31.media.tumblr.com/6e2d62d35faf6e79ccff40fa967df553/tumblr_ncb98zYVds1s5htxyo5_250.gif" alt="" data-pin-url="http://apexministry.tumblr.com/post/98151615201/a-flexible-system-designed-for-the-posters-of">
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="thumbnail">
+      <div class="post photo masonry-brick">
+        <div class="post_body">
+
+          <div class="image">
+
+            <a href="#">
+              <img src="http://33.media.tumblr.com/53fad425d44cc42fcb59670683bc6d5c/tumblr_nc7e8726xc1sm6lxao1_500.jpg" border="0">
+            </a>
+
+            <div class="permalink">
+              <a href="#">Permalink</a>
+            </div>
+            <!--permalink-->
+
+
+          </div>
+          <!--image-->
+
+          <div class="caption"><p>
+            <a class="tumblr_blog" href="#">lovegoodtype</a>:
+          </p>
+            <blockquote>
+              <p>"Coffee" by @markcaneso <br> #goodtype #typography #lettering #handletter #vector #coffee</p>
+            </blockquote>
+          </div>
+
+        </div>
+        <!--post_body-->
+
+        <div class="meta">
+
+          <ul>
+            <li>
+              <a href="#">257 notes</a>
+            </li>
+
+
+          </ul>
+        </div>
+        <!--meta-->
+
+
+      </div>
+    </div>
+  </div>
+</div>
