--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,14 +20,14 @@
       <a class="delay <%= 'active' if controller_name == "blog" %>" href="/blog/index"><span class="delay glyphicon glyphicon-dashboard"></span> Blog</a>
     </li>
     <li>
-      <a class="delay <%= 'active' if controller_name =~ /tutorials|ruby|others/ %>" href="/tutorials/index"><span class="delay glyphicon glyphicon-book"></span>Projects</a>
+      <a class="delay <%= 'active' if controller_name =~ /tutorials|ruby|others/ %>" href="/tutorials/index"><span class="delay glyphicon glyphicon-book"></span> Tutoriales</a>
       <span class="alert badge">6</span>
     </li>
     <li>
-      <a class="delay <%= 'active' if controller_name == "contacts" %>" href="/contacts/new"><span class="delay glyphicon glyphicon-comment"></span> Contacts</a>
+      <a class="delay <%= 'active' if controller_name == "contacts" %>" href="/contacts/new"><span class="delay glyphicon glyphicon-comment"></span> Contactos</a>
     </li>
     <li>
-      <a class="delay <%= 'active' if controller_name == "about" %>" href="/about/index"><span class="delay glyphicon glyphicon-user"></span> About</a>
+      <a class="delay <%= 'active' if controller_name == "about" %>" href="/about/index"><span class="delay glyphicon glyphicon-user"></span> Acerca</a>
     </li>
     <!--<li><a class="delay" href="#"><span class="delay glyphicon glyphicon-globe"></span> Social</a></li>-->
   </ul>
