--- a/app/views/others/and.html.erb
+++ b/app/views/others/and.html.erb
@@ -1,6 +1,6 @@
 <article >
   <div class="span10">
-    <h2 id='rails_and_app_tutorial'> Programacion Dispositivos</h2> <b>
+    <h2 id='rails_and_app_tutorial'><%= link_to '<i class="glyphicon glyphicon-circle-arrow-left"></i>'.html_safe, tutorials_index_path %> Programacion Dispositivos</h2> <b>
   </b>
 
     <div class="inner" id="msg_93570">
