--- a/app/views/others/git.html.erb
+++ b/app/views/others/git.html.erb
@@ -1,6 +1,6 @@
 <article>
 <h2>
-  Git desde Cero
+  <%= link_to '<i class="glyphicon glyphicon-circle-arrow-left"></i>'.html_safe, tutorials_index_path %> Git desde Cero
 </h2>
 
 <div>
