--- a/app/views/others/sqli.html.erb
+++ b/app/views/others/sqli.html.erb
@@ -1,3 +1,5 @@
-<CENTER>
+<h2>
+  <%= link_to '<i class="glyphicon glyphicon-circle-arrow-left"></i>'.html_safe, tutorials_index_path %>
+</h2><CENTER>
   <iframe id="form" height="500" width="1024" src="http://www.hackxcrack.es/forum/index.php?topic=16117.0%3Btopicseen"></iframe>
 </CENTER>
