--- a/app/views/tutorials/index.html.erb
+++ b/app/views/tutorials/index.html.erb
@@ -1,17 +1,17 @@
-<h2>Tutorials#Ruby on Rails (RoR) </h2>
+<h2> <%= link_to '<i class="glyphicon glyphicon-circle-arrow-left"></i>'.html_safe, root_path %> Ruby on Rails (RoR) </h2>
 <p>
 <ul>
-  <li><%= link_to "instalación ", :controller=> :others , :action=> :iror %> </li>
+  <li><%= link_to "Instalación ", :controller=> :others , :action=> :iror %> </li>
   <li><%= link_to "Primera aplicación", :controller=> :others , :action=> :sieapp %></li>
   <li><%= link_to "Ruby", :controller=> :ruby , :action=> :inicio %></li>
   <li><%= link_to "Github con RoR", :controller => :others, :action => "git" %></li>
 </ul>
 </p>
 <br>
-<h2>Others#Lenguajes de programación </h2>
+<h2>Lenguajes de programación </h2>
 <p>
 <ul>
-  <li><%= link_to "php(codeigniter)", :controller=>:others, :action=>"phpcodeigniter" %></li>
-  <li><%= link_to "android(curso audio visual)", :controller=>:others, :action=>"and" %></li>
+  <li><%= link_to "Php(codeigniter)", :controller=>:others, :action=>"phpcodeigniter" %></li>
+  <li><%= link_to "Android(curso audio visual)", :controller=>:others, :action=>"and" %></li>
 </ul>
 </p>
