--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,7 +12,6 @@
         <%= image_tag 'bg/bg-archea.jpg' %>
         <div class="container">
           <div class="carousel-caption">
-
           </div>
         </div>
       </div>
@@ -46,7 +45,7 @@
 
     <div class="row">
       <div class="col-sm-5">
-        <h5>IverlandthCopr Design
+        <h5>IverlandthCorp Design
           <small>Web &amp; Graphic Design Agency</small>
         </h5>
         <p><a href='http://twitter.com/iverlandth' target="_blank">@iverlandth</a></p>
@@ -113,7 +112,7 @@
 
     <hr>
     <div class="pull-right">
-      <p class="copyright"><a href="#">Privacy and legal notes</a> - © 2014 IverlandthCopr Design</p>
+      <p class="copyright"><a href="#">Privacy and legal notes</a> - © 2014 IverlandthCorp Design</p>
     </div>
 
 </footer>
