--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,4 +1,4 @@
-<h2>About</h2>
+<h2> <%= link_to '<i class="glyphicon glyphicon-circle-arrow-left"></i>'.html_safe, root_path %> Acerca de mí</h2>
 <div class="row ">
   <div class="col-md-12 ">
     <div class="thumbnail">
