--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,4 +1,4 @@
-<h2>New contact</h2>
+<h2> <%= link_to '<i class="glyphicon glyphicon-circle-arrow-left"></i>'.html_safe, root_path %> New contact</h2>
 
 <%= render 'form' %>
 
