--- a/app/views/others/sieapp.html.erb
+++ b/app/views/others/sieapp.html.erb
@@ -1,6 +1,6 @@
 <article>
 <div class="span10">
-<h2 id='rails_girls_app_tutorial'>Rails Sie App Tutorial</h2>
+<h2 id='rails_girls_app_tutorial'><%= link_to '<i class="glyphicon glyphicon-circle-arrow-left"></i>'.html_safe, tutorials_index_path %> Rails Sie App Tutorial</h2>
 
 
 <p><strong>Asegúrese de que ha instalado rails.</strong>
