--- a/app/views/ruby/inicio.html.erb
+++ b/app/views/ruby/inicio.html.erb
@@ -1,6 +1,6 @@
 <div id="readme" class="blob instapaper_body">
   <article itemprop="mainContentOfPage"><h2>
-    <a name="inicio" class="anchor" href="#inicio"><span class="mini-icon mini-icon-link"></span></a>Inicio</h2>
+    <a name="inicio" class="anchor" href="#inicio"><span class="mini-icon mini-icon-link"></span></a><%= link_to '<i class="glyphicon glyphicon-circle-arrow-left"></i>'.html_safe, tutorials_index_path %>  Inicio</h2>
 
     <p>Cuando programas una computadora, necesitas "hablar" en la forma que tu
       computadora entienda: un lenguaje de programación. Existen diferentes
