update page 25 de sept

--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -3,9 +3,9 @@
 <table>
   <thead>
     <tr>
-      <th>Title</th>
       <th>Name</th>
-      <th>Content</th>
+      <th>Email</th>
+      <th>Message</th>
       <th></th>
       <th></th>
       <th></th>
@@ -15,12 +15,12 @@
   <tbody>
     <% @contacts.each do |contact| %>
       <tr>
-        <td><%= contact.title %></td>
         <td><%= contact.name %></td>
-        <td><%= contact.content %></td>
+        <td><%= contact.email %></td>
+        <td><%= contact.message %></td>
         <td><%= link_to 'Show', contact %></td>
-        <td><%#= link_to 'Edit', edit_contact_path(contact) %></td>
-        <td><%#= link_to 'Destroy', contact, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Edit', edit_contact_path(contact) %></td>
+        <td><%= link_to 'Destroy', contact, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +28,4 @@
 
 <br>
 
-<%#= link_to 'New Contact', new_contact_path %>
+<%= link_to 'New Contact', new_contact_path %>
