--- a/app/views/others/iror.html.erb
+++ b/app/views/others/iror.html.erb
@@ -32,7 +32,7 @@
 
 
     <p><strong>Paso 2.</strong> En la ventana que se encuentra la versión de su sistema operativo. Si el número de
-      versión comienza con un 10,6, 10,7 o 10,8 de esta guía es para usted.</p>
+      versión comienza con un 10,6, 10,7, 10.8 o 10,9 de esta guía es para usted.</p>
 
     <div class="row ">
       <div class="col-md-12 ">
@@ -88,8 +88,7 @@
     <p>Para instalar el entorno Ruby on Rails sólo tienes que copiar y pegar esta línea en el terminal y pulse Entrar.
       Disfrute del texto en la pantalla, se tardará bastante tiempo. :)</p>
 
-    <div class='highlight'><pre><code class='sh'>bash &lt; &lt;<span class='o'>(</span>curl -s
-      https://raw.github.com/railsgirls/installation-scripts/master/rails-install-ubuntu.sh<span class='o'>)</span>
+    <div class='highlight'><pre><code class='sh'>bash &lt;&lt; <span class='o'>(</span>curl -s https://raw.github.com/railsgirls/installation-scripts/master/rails-install-ubuntu.sh<span class='o'>)</span>
     </code></pre>
     </div>
     <p><strong>Paso final.</strong> También es necesario un editor de texto para editar archivos de código. Para el
