--- a/app/views/tutorials/index.html.erb
+++ b/app/views/tutorials/index.html.erb
@@ -1,4 +1,4 @@
-<h2> <%= link_to '<i class="glyphicon glyphicon-circle-arrow-left"></i>'.html_safe, root_path %> Ruby on Rails (RoR) </h2>
+<h2>Ruby on Rails (RoR) </h2>
 <p>
 <ul>
   <li><%= link_to "Instalación ", :controller=> :others , :action=> :iror %> </li>
