--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,10 +1,10 @@
-<%= simple_form_for(@contact, :html=>{:class=> 'form'}) do |f| %>
+<%= simple_form_for(@contact) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :title %>
     <%= f.input :name %>
-    <%= f.input :content %>
+    <%= f.input :email %>
+    <%= f.input :message %>
   </div>
 
   <div class="form-actions">
