--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,4 +1,4 @@
-<h2> <%= link_to '<i class="glyphicon glyphicon-circle-arrow-left"></i>'.html_safe, root_path %> <%= t('.title') %></h2>
+<h2><%= t('.title') %></h2>
 
 <%= render 'form' %>
 
