--- a/app/views/others/sieapp.html.erb
+++ b/app/views/others/sieapp.html.erb
@@ -28,7 +28,7 @@
 <p>En primer lugar, vamos a abrir una terminal:</p>
 
 <ul>
-  <li>Mac OS X: Spotlight Abrir, escriba <em>Terminal</em> y haga clic en el Terminal de aplicación </em> </li>
+  <li>Mac OS X: Spotlight Abrir, escriba <em>Terminal</em> y haga clic en el Terminal de aplicación</li>
 
   <li>Windows: Haga clic en Inicio y buscar <em>Command Prompt</em> y, a continuación, haga clic en
     <em>Símbolo del sistema con Ruby on Rails</em>.
@@ -39,7 +39,8 @@
 
 <p>A continuación, escriba los siguientes comandos en la terminal:</p>
 
-<div class='highlight'><pre><code class='sh'>mkdir projects
+<div class='highlight'>
+  <pre><code class='sh'>  mkdir projects
   <span class='nb'>cd </span>projects
   rails new siesrl
   <span class='nb'>cd </span>siesrl
@@ -57,7 +58,7 @@
   eliminar, editar y ver las cosas, en las ideas de nuestros casos.</p>
 
 
-<div class='highlight'><pre><code class='sh'>rails generate scaffold idea name:string description:text picture:string
+<div class='highlight'><pre><code class='sh'>  rails generate scaffold idea name:string description:text picture:string
   rake db:migrate
   rails server
 </code></pre>
@@ -74,8 +75,8 @@
 
 <p>Abra <code>app/views/layouts/application.html.erb</code> en su editor de texto.</p>
 
-<div class='highlight'><pre><code class='erb'><span class='cp'>&lt;%=</span> <span class='n'>stylesheet_link_tag</span>
-  <span class='s2'>&quot;application&quot;</span> <span class='cp'>%&gt;</span><span class='x'/>
+<div class='highlight'>
+  <pre><code class='erb'><span class='cp'>&lt;%=</span> <span class='n'>stylesheet_link_tag</span><span class='s2'> &quot;application&quot;</span> <span class='cp'>%&gt;</span><span class='x'/>
 </code></pre>
 </div>
 <p>añadir</p>
@@ -85,15 +86,14 @@
 </div>
 <p>y reemplazar</p>
 
-<div class='highlight'><pre><code class='erb'><span class='cp'>&lt;%=</span> <span class='k'>yield</span>
-  <span class='cp'>%&gt;</span><span class='x'/>
+<div class='highlight'><pre><code class='erb'><span class='cp'>&lt;%=</span> <span class='k'>yield</span> <span class='cp'>%&gt;</span><span class='x'/>
 </code></pre>
 </div>
 <p>con</p>
 
 <div class='highlight'><pre><code class='erb'><span class='x'>&lt;div class=&quot;container&quot;&gt;</span>  <span class='x'>
 </span> <span class='cp'>&lt;%=</span> <span class='k'>yield</span> <span class='cp'>%&gt;</span><span class='x'/>
-  <span class='x'>&lt;/div&gt;</span>
+<span class='x'>&lt;/div&gt;</span>
 </code></pre>
 </div>
 <p>También vamos a añadir una barra de navegación y pie de página para el diseño. En el mismo archivo, debajo
@@ -292,4 +292,3 @@
 </ul>
 </div>
 </article>
-</br></br></br>
