--- a/app/assets/stylesheets/icononav.css
+++ b/app/assets/stylesheets/icononav.css
@@ -6,7 +6,7 @@ nav#icononav{
 	min-height:670px;
 	text-align:center;
     color: #ffffff;
-    background: none repeat scroll 0% 0% rgba(4, 127, 97, 0.96);
+    background: none repeat scroll 0% 0% rgba(4, 127, 97, 0.8);
     /*background: rgb(0, 0, 0);  Old browsers */
     /*background: -moz-radial-gradient(center, ellipse cover,  rgba(76,69,76,1) 1%, rgba(50,43,50,1) 50%, rgba(20,10,18,1) 100%); *//* FF3.6+ */
     /*background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(1%,rgba(76,69,76,1)), color-stop(50%,rgba(50,43,50,1)), color-stop(100%,rgba(20,10,18,1))); *//* Chrome,Safari4+ */
@@ -73,7 +73,7 @@ nav#icononav ul.links li .alert{
 
 nav#icononav ul.links li a{
 	display:block;
-    color: #000000;
+    color: #ffffff;
 	border-left:4px solid transparent
 }
 
