--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,9 +18,10 @@
 
 body {
     padding-bottom: 60px;
-    background: none repeat scroll 0% 0% rgba(239, 242, 246, 0.8);
+    background: none repeat scroll 0% 0% rgba(255, 255, 255, 0.80);
     background-image: url(/assets/header-bg.gif), url(/assets/footer-bg.jpg);
     background-position: top,bottom;
+    background-attachment: fixed;
     background-repeat: repeat-x, repeat-x;
     /*color: #ffffff;*/
     /*background-color: #f4f4f4;*/
@@ -52,4 +53,7 @@ a:hover{
 }
 .btn-color{
     background: #39bdb9;
+}
+.panel-transparent{
+    background-color:rgba(255,255,255,0.8) !important;
 }
