--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,12 @@
 
 <div class="container">
   <p id="notice"><%= notice %></p>
-  <%= yield %>
+
+  <div class="panel panel-default panel-transparent">
+    <div class="panel-body">
+      <%= yield %>
+    </div>
+  </div>
 </div>
 
 <script type="text/javascript">
